--- a/src/app/dashboard/dashboard.component.html
+++ b/src/app/dashboard/dashboard.component.html
@@ -2,7 +2,26 @@
   <div class="container-fluid">
       <div class="row">
           <div class="col-lg-3 col-md-6 col-sm-6">
-              <div class="card card-stats">
+              <div class="cardz purple">
+                  <div class="row">
+                      <div class="col-6 ">
+                        <i class="material-icons" style="font-size: 50px">sports_cricket</i>
+                      </div>
+                      <div class="col-6">
+                          <div class="row">
+                            Upcoming Match
+                          </div>
+                          <div class="row">
+                            <button>Hii</button>
+                          </div>                        
+                      </div>
+                  </div>
+                
+                
+              
+              </div>
+                
+              <!-- <div class="card card-stats">
                   <div class="card-header card-header-warning card-header-icon">
                       <div class="card-icon">
                           <i class="material-icons">content_copy</i>
@@ -18,10 +37,16 @@
                           <a href="javascript:void(0)">Get More Space...</a>
                       </div>
                   </div>
-              </div>
+              </div> -->
           </div>
           <div class="col-lg-3 col-md-6 col-sm-6">
-              <div class="card card-stats">
+            <div class="cardz green">
+                <h1>Pricing</h1>
+                <p>Here is a paragraph of text than is being added to the card. And here is some more text to make it even longer than it already was. Here is a paragraph of text than is being added to the card. And here is some more text to make it even longer than it already was.</p>
+              
+              </div>
+
+              <!-- <div class="card card-stats">
                   <div class="card-header card-header-success card-header-icon">
                       <div class="card-icon">
                           <i class="material-icons">store</i>
@@ -34,10 +59,10 @@
                           <i class="material-icons">date_range</i> Last 24 Hours
                       </div>
                   </div>
-              </div>
+              </div> -->
           </div>
           <div class="col-lg-3 col-md-6 col-sm-6">
-              <div class="card card-stats">
+              <!-- <div class="card card-stats">
                   <div class="card-header card-header-danger card-header-icon">
                       <div class="card-icon">
                           <i class="material-icons">info_outline</i>
@@ -50,10 +75,10 @@
                           <i class="material-icons">local_offer</i> Tracked from Github
                       </div>
                   </div>
-              </div>
+              </div> -->
           </div>
           <div class="col-lg-3 col-md-6 col-sm-6">
-              <div class="card card-stats">
+              <!-- <div class="card card-stats">
                   <div class="card-header card-header-info card-header-icon">
                       <div class="card-icon">
                           <i class="fa fa-twitter"></i>
@@ -66,10 +91,10 @@
                           <i class="material-icons">update</i> Just Updated
                       </div>
                   </div>
-              </div>
+              </div> -->
           </div>
       </div>
-      <div class="row">
+      <!-- <div class="row">
           <div class="col-md-4">
               <div class="card card-chart">
                   <div class="card-header card-header-success">
@@ -410,6 +435,6 @@
                   </div>
               </div>
           </div>
-      </div>
+      </div> -->
   </div>
 </div>
