--- a/src/app/dashboard/dashboard.component.html
+++ b/src/app/dashboard/dashboard.component.html
@@ -2,23 +2,20 @@
   <div class="container-fluid">
       <div class="row">
           <div class="col-lg-3 col-md-6 col-sm-6">
-              <div class="cardz purple">
+              <div class="cardz green">
                   <div class="row">
                       <div class="col-6 ">
-                        <i class="material-icons" style="font-size: 50px">sports_cricket</i>
+                        <img src="../../assets/img/upcominmat.png" width="70px">
                       </div>
                       <div class="col-6">
                           <div class="row">
                             Upcoming Match
                           </div>
                           <div class="row">
-                            <button>Hii</button>
+                            <button>Click Here</button>
                           </div>                        
                       </div>
                   </div>
-                
-                
-              
               </div>
                 
               <!-- <div class="card card-stats">
@@ -40,11 +37,21 @@
               </div> -->
           </div>
           <div class="col-lg-3 col-md-6 col-sm-6">
-            <div class="cardz green">
-                <h1>Pricing</h1>
-                <p>Here is a paragraph of text than is being added to the card. And here is some more text to make it even longer than it already was. Here is a paragraph of text than is being added to the card. And here is some more text to make it even longer than it already was.</p>
-              
-              </div>
+            <div class="cardz purple">
+                <div class="row">
+                    <div class="col-6 ">
+                      <img src="../../assets/img/livematch.png" width="70px">
+                    </div>
+                    <div class="col-6">
+                        <div class="row">
+                          Live Matches
+                        </div>
+                        <div class="row">
+                          <button>Click Here</button>
+                        </div>                        
+                    </div>
+                </div>
+            </div>
 
               <!-- <div class="card card-stats">
                   <div class="card-header card-header-success card-header-icon">
@@ -62,6 +69,21 @@
               </div> -->
           </div>
           <div class="col-lg-3 col-md-6 col-sm-6">
+            <div class="cardz blue">
+                <div class="row">
+                    <div class="col-6 ">
+                      <img src="../../assets/img/get11palyers.png" width="60px">
+                    </div>
+                    <div class="col-6">
+                        <div class="row">
+                          Get Playing <br/>11 Players
+                        </div>
+                        <div class="row">
+                          <button>Click Here</button>
+                        </div>                        
+                    </div>
+                </div>
+            </div>
               <!-- <div class="card card-stats">
                   <div class="card-header card-header-danger card-header-icon">
                       <div class="card-icon">
@@ -78,6 +100,21 @@
               </div> -->
           </div>
           <div class="col-lg-3 col-md-6 col-sm-6">
+            <div class="cardz orange">
+                <div class="row">
+                    <div class="col-6 ">
+                      <img src="../../assets/img/updatepoints.png" width="70px">
+                    </div>
+                    <div class="col-6">
+                        <div class="row">
+                          Update<br/>Points
+                        </div>
+                        <div class="row">
+                          <button>Click Here</button>
+                        </div>                        
+                    </div>
+                </div>
+            </div>
               <!-- <div class="card card-stats">
                   <div class="card-header card-header-info card-header-icon">
                       <div class="card-icon">
@@ -436,5 +473,51 @@
               </div>
           </div>
       </div> -->
+      <div class="row">
+            <div class="col-sm-3 col-12 dashboard-users-success">
+                <div class="card text-center">
+                    <div class="card-body py-1">
+                        <div class="badge-circle badge-circle-lg badge-circle-light-success mx-auto mb-50">
+                            <i class="material-icons">receipt_long</i>
+                        </div>
+                        <div class="text-muted line-ellipsis dashcard-middle">New Products</div>
+                        <h3 class="mb-0 dashcard-h3">1.2k</h3>
+                    </div>
+                </div>
+            </div>
+            <div class="col-sm-3 col-12 dashboard-users-success">
+                <div class="card text-center">
+                    <div class="card-body py-1">
+                        <div class="badge-circle badge-circle-lg badge-circle-light-danger mx-auto mb-50">
+                            <i class="material-icons">person</i>
+                        </div>
+                        <div class="text-muted line-ellipsis dashcard-middle">Total Users</div>
+                        <h3 class="mb-0 dashcard-h3">3.2k</h3>
+                    </div>
+                </div>
+            </div>
+            <div class="col-xl-6 col-md-6 col-12 dashboard-greetings">
+                <div class="card">
+                  <div class="card-header">
+                    <h3 class="greeting-text">Congratulations John!</h3>
+                    <p class="mb-0">Best seller of the month</p>
+                  </div>
+                  <div class="card-body pt-0">
+                    <div class="d-flex justify-content-between align-items-end">
+                      <div class="dashboard-content-left">
+                        <h1 class="text-primary font-large-2 text-bold-500">$89k</h1>
+                        <p>You have done 57.6% more sales today.</p>
+                        <button type="button" class="btn btn-primary glow">View Sales</button>
+                      </div>
+                      <div class="dashboard-content-right">
+                        <img src="../../assets/img/cup.png" height="220" width="220" class="img-fluid"
+                          alt="Dashboard Ecommerce" />
+                      </div>
+                    </div>
+                  </div>
+                </div>
+            </div>
+      </div>
+      
   </div>
 </div>
