--- a/src/app/components/sidebar/sidebar.component.html
+++ b/src/app/components/sidebar/sidebar.component.html
@@ -1,6 +1,6 @@
 <div class="logo">
-    <a href="https://www.creative-tim.com" class="simple-text" style="color:white">
-        <img src="../../../assets/img/logo-white.png" height="40px"/>
+    <a href="#" class="simple-text" style="color:white">
+        <img src="assets/img/logo-white.png" height="40px"/>
     </a>
 </div>
 <div class="sidebar-wrapper">
