--- a/src/app/demo/demo.component.html
+++ b/src/app/demo/demo.component.html
@@ -1,7 +1,7 @@
-
 <div class="main-content">
     <div class="container-fluid">
-        <h1>Demo</h1>
+      <div class="row">
+        <h1>Demo Component | Work in Progress</h1>
+      </div>
     </div>
-  </div>
-  
+</div>  
